# hostaddr

./: .codecov.yml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  cobertura.xml
.github/workflows/: ci.yml  loc.yml
src/: addr.rs  arbitrary_impl.rs  domain.rs  host.rs  ipc.rs  lib.rs  quickcheck_impl.rs  semantic.rs  test.rs
src/addr/: mod.rs  tests.rs
src/domain/: inlined.rs  mod.rs  tests.rs
src/host/: mod.rs  tests.rs
src/ipc/: mod.rs  tests.rs
src/semantic/: mod.rs  tests.rs
